fix(Window):removed overflow scrolling

--- a/src/components/Window.module.scss
+++ b/src/components/Window.module.scss
@@ -37,8 +37,8 @@
 }
 
 .background {
-  overflow: auto;
-  z-index: 1;
+  z-index: 0;
+  overflow: hidden;
 }
 
 .root.contrast {
